# cpp-autonomous-vehicle

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  run.sh
configuration/: config.h  config.h.in
src/: frame_extractor.hpp  main.cpp  motor_driver.cpp  motor_driver.hpp  onnx_model_handler.hpp  onnxmodelhandler.hpp  pins.h  sign_detection.cpp  sign_detection.hpp  vehicle.hpp  vision.cpp  vision.hpp
src/model/: extract_frame.py  labels.csv  labels.txt  save_as_onnx.py  sign.onnx  test_model.py  test_onnx.py  train_test.py
src/utils/: filesystem.hpp  frame_extractor.hpp  stopwatch.hpp
